Inicio do Projeto

--- a/ProjetoMVC/ProjetoMVC/Views/Home/Index.cshtml
+++ b/ProjetoMVC/ProjetoMVC/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem Vindo!</h1>
-    <p>Meu Primeiro Repositório MVC</p>
+    <h1 class="display-4">Bem Vindo</h1>
+    <p>Meu primeiro projeto MVC</a>.</p>
 </div>
